@@ -8,4 +8,5 @@ require("prototypes.technologies")
 require("prototypes.tips-and-tricks")
 
 require("prototypes.compatibility.bobsep")
+require("prototypes.compatibility.space-exploration")
 require("prototypes.compatibility.SqueakThrough")
