@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: ????
-  Changes:
+  Compatibility:
+    - [Space Exploration] Moved duct items to the pipe subgroup (#5)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2022-01-03
